@@ -86,6 +86,34 @@ SCOREP_Instrumenter_MemoryAdapter::getConfigToolFlag( SCOREP_Instrumenter_CmdLin
     return "";
 }
 
+bool
+SCOREP_Instrumenter_MemoryAdapter::checkCommand( const std::string& current,
+                                                 const std::string& next )
+{
+#if SCOREP_BACKEND_COMPILER_IBM
+    if ( current == "-O4" ||
+         current == "-O5" ||
+         current == "-qipa" ||
+         ( current.substr( 0, 6 ) == "-qipa=" ) )
+    {
+        if ( isEnabled() )
+        {
+            std::cerr << "ERROR: Function wrapping does not work in combination with\n"
+                      << "       interprocedural analysis (-qipa compiler flag)\n"
+                      << "       Disable the memory measurement in Score-P or remove the\n"
+                      << "       interprocedural analysis flag."
+                      << std::endl;
+            exit( EXIT_FAILURE );
+        }
+        else
+        {
+            m_usage = disabled;
+        }
+    }
+#endif  /* SCOREP_BACKEND_COMPILER_IBM */
+    return false;
+}
+
 void
 SCOREP_Instrumenter_MemoryAdapter::checkObjects( SCOREP_Instrumenter& instrumenter )
 {
