@@ -32,6 +32,7 @@ Bugfixes:
   the same parameters.
 - Fix that memory allocation measurements are disabled if the
   user explicitly specifies --memory
+- Fix conflict of function wrapping with IPA on BlueGene systems
 
 ------------------- Released version 3.0 -----------------------------
 
